<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/welcome_fr_b">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="20dp"></TextView>

    <TextView
        android:id="@+id/fight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fight"
        android:textSize="20dp"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entire_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/write_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:maxLength="30"
            android:layout_alignParentLeft="true"
            >
        </EditText>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:text="@string/add_player"
            android:textSize="10dp"
            android:id="@+id/add_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add"
            android:layout_gravity="right"
            >

        </Button>
    </LinearLayout>




    <ListView
        android:id="@+id/list_test"
        android:layout_below="@+id/add_player"
        android:layout_above="@id/start"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
    </ListView>

    <Button
        android:id="@+id/delete"
        android:text="@string/delete_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/add"
        android:textSize="10dp"
        android:layout_gravity="right">

    </Button>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:text="@string/start_game"
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/start"
        android:layout_centerInParent="true" >

    </Button>

        </RelativeLayout>
</LinearLayout>
</LinearLayout>